// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`channels reducer handles actions -setLastSeen sets last seen for channel 1`] = `
Immutable.List [
  Immutable.Map {
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-0",
      "sk": "test-secret-key",
    },
    "name": "Channel 0",
    "private": false,
    "address": "zs1testaddress0",
    "unread": 0,
    "description": "",
  },
  Immutable.Map {
    "lastSeen": "2019-03-07T11:03:48.000Z",
    "name": "Channel 1",
    "private": true,
    "address": "zs1testaddress1",
    "unread": 1,
    "description": "Channel about 1",
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-1",
      "sk": "test-secret-key",
    },
  },
  Immutable.Map {
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-2",
      "sk": "test-secret-key",
    },
    "name": "Channel 2",
    "private": false,
    "address": "zs1testaddress2",
    "unread": 2,
    "description": "",
  },
]
`;

exports[`channels reducer handles actions -setUnread sets unread for channel 1`] = `
Immutable.List [
  Immutable.Map {
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-0",
      "sk": "test-secret-key",
    },
    "name": "Channel 0",
    "private": false,
    "address": "zs1testaddress0",
    "unread": 0,
    "description": "",
  },
  Immutable.Map {
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-1",
      "sk": "test-secret-key",
    },
    "name": "Channel 1",
    "private": true,
    "address": "zs1testaddress1",
    "unread": 2,
    "description": "Channel about 1",
  },
  Immutable.Map {
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-2",
      "sk": "test-secret-key",
    },
    "name": "Channel 2",
    "private": false,
    "address": "zs1testaddress2",
    "unread": 2,
    "description": "",
  },
]
`;

exports[`channels reducer handles actions -setUnread sets unread for channel 2`] = `
Immutable.List [
  Immutable.Map {
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-0",
      "sk": "test-secret-key",
    },
    "name": "Channel 0",
    "private": false,
    "address": "zs1testaddress0",
    "unread": 0,
    "description": "",
  },
  Immutable.Map {
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-1",
      "sk": "test-secret-key",
    },
    "name": "Channel 1",
    "private": true,
    "address": "zs1testaddress1",
    "unread": 2,
    "description": "Channel about 1",
  },
  Immutable.Map {
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-2",
      "sk": "test-secret-key",
    },
    "name": "Channel 2",
    "private": false,
    "address": "zs1testaddress2",
    "unread": 2,
    "description": "",
  },
]
`;

exports[`channels reducer handles load channels cleans up loading when rejected 1`] = `
Immutable.Record {
  "loading": false,
  "message": "Loading channels",
}
`;

exports[`channels reducer handles load channels makes sure keys are present 1`] = `
Array [
  Array [
    "incoming-viewing-key-2",
    "no",
    0,
    "zs1testaddress2",
  ],
  Array [
    "incoming-viewing-key-1",
    "no",
    0,
    "zs1testaddress1",
  ],
  Array [
    "incoming-viewing-key-0",
    "no",
    0,
    "zs1testaddress0",
  ],
]
`;

exports[`channels reducer handles load channels when fulfilled 1`] = `
Immutable.List [
  Immutable.Map {
    "lastSeen": "2019-03-07T13:03:48.000Z",
    "name": "Channel 2",
    "private": true,
    "address": "zs1testaddress2",
    "unread": 2,
    "description": "",
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-2",
      "sk": "test-secret-key",
    },
  },
  Immutable.Map {
    "lastSeen": "2019-03-07T13:03:48.000Z",
    "name": "Channel 1",
    "private": true,
    "address": "zs1testaddress1",
    "unread": 1,
    "description": "Channel about 1",
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-1",
      "sk": "test-secret-key",
    },
  },
  Immutable.Map {
    "lastSeen": "2019-03-07T13:03:48.000Z",
    "name": "Channel 0",
    "private": true,
    "address": "zs1testaddress0",
    "unread": 0,
    "description": "",
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-0",
      "sk": "test-secret-key",
    },
  },
]
`;

exports[`channels reducer handles load channels when pending 1`] = `
Immutable.ChannelsState {
  "data": Immutable.List [],
  "loader": Immutable.Record {
    "loading": true,
    "message": "Loading channels",
  },
}
`;
